--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,8 +17,9 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Haettenschweiler, 'Arial Narrow Bold', ;
-  font-weight: 500;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-weight: 400;
+  
   font-variant:small-caps;
   font-size: 1.1em;
 }
@@ -43,5 +44,5 @@ body {
 
 .invert {
   filter: invert(1) hue-rotate(180deg) brightness(0.9) contrast(1.1);
-  font-weight: 600;
+  font-weight: 500;
 }
